.k8s/02_mysql.deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
  namespace: etherpad
  labels:
    app: mysql
    layer: db
    project: etherpad
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mysql
        layer: db
        project: etherpad
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      containers:
        - name: mysql
          image: mariadb:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
