.k8s/01_etherpad.service.yml
apiVersion: v1
kind: Service
metadata:
  name: etherpad
  namespace: etherpad
spec:
  externalTrafficPolicy: Cluster
  type: LoadBalancer
  selector:
    app: etherpad
    layer: backend
    project: etherpad
  ports:
    - name: 9001-tcp
      protocol: TCP
      port: 9001
      targetPort: 9001
