.k8s/01_mysql.service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: etherpad
spec:
  externalTrafficPolicy: Cluster
  type: LoadBalancer
  selector:
    app: mysql
    layer: db
    project: etherpad
  ports:
  - name: mysql-port
    protocol: TCP
    port: 3306
    targetPort: 3306
